# FFmpegAndroid

./: README.md  build_android.sh  instapk.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/arshowbaby/com/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/jacket/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/arshowbaby/com/ffmpeg/: ExampleUnitTest.java
ffmpegandroidaddmusic/: build.gradle
ffmpegandroidaddmusic/src/main/: AndroidManifest.xml
ffmpegandroidaddmusic/src/main/cpp/: native-lib.cpp
ffmpegandroidaddmusic/src/main/java/com/jacket/ffmpegandroidaddmusic/: MainActivity.java
ffmpegandroidavfilter/: build.gradle
ffmpegandroidavfilter/src/main/: AndroidManifest.xml
ffmpegandroidavfilter/src/main/cpp/: native-lib.cpp  native-lib.h
ffmpegandroidavfilter/src/main/java/com/jacket/ffmpegandroidavfilter/: MainActivity.java
ffmpegandroidcameraencoder/: build.gradle
ffmpegandroidcameraencoder/src/main/: AndroidManifest.xml
ffmpegandroidcameraencoder/src/main/cpp/: native-lib.cpp  native-lib.h
ffmpegandroidcameraencoder/src/main/java/com/jacket/ffmpegandroidcameraencoder/: MainActivity.java
ffmpegandroidcameralive/: build.gradle
ffmpegandroidcameralive/src/main/: AndroidManifest.xml
ffmpegandroidcameralive/src/main/cpp/: native-lib.cpp  native-lib.h
ffmpegandroidcameralive/src/main/java/com/jacket/ffmpegandroidcameralive/: MainActivity.java  WSPlayer.java
ffmpegandroidcompress/: CMakeLists.txt  build.gradle
ffmpegandroidcompress/libs/ffmpeg-3.2.5/: config.asm  config.fate  config.h  config.mak
ffmpegandroidcompress/libs/ffmpeg-3.2.5/doc/: config.texi
ffmpegandroidcompress/libs/ffmpeg-3.2.5/libavcodec/: libavcodec.pc  libavcodec.so.57  libfdk-aacenc.d  libx264.d
ffmpegandroidcompress/libs/ffmpeg-3.2.5/libavfilter/: libavfilter.pc
ffmpegandroidcompress/libs/ffmpeg-3.2.5/libavformat/: libavformat.pc  libavformat.so.57
ffmpegandroidcompress/libs/ffmpeg-3.2.5/libavutil/: libavutil.pc  libavutil.so.55
ffmpegandroidcompress/libs/ffmpeg-3.2.5/libswresample/: libswresample.pc
ffmpegandroidcompress/libs/ffmpeg-3.2.5/libswscale/: libswscale.pc
ffmpegandroidcompress/src/androidTest/java/com/example/ffmpegandroidcompress/: ExampleInstrumentedTest.java
ffmpegandroidcompress/src/main/: AndroidManifest.xml
ffmpegandroidcompress/src/main/cpp/: ffmpeg.c  ffmpeg.h  ffmpeg_cmd_run.c
ffmpegandroidcompress/src/main/java/com/example/ffmpegandroidcompress/: FFMpegNativeBridge.java  MainActivity.java
ffmpegandroidcompress/src/main/res/layout/: activity_main.xml
ffmpegandroidcompress/src/main/res/values/: strings.xml
ffmpegandroidcompress/src/test/java/com/example/ffmpegandroidcompress/: ExampleUnitTest.java
ffmpegandroiddecoder/: build.gradle
ffmpegandroiddecoder/src/main/: AndroidManifest.xml
ffmpegandroiddecoder/src/main/cpp/: native-lib.cpp
ffmpegandroidplayer/: build.gradle
ffmpegandroidplayer/src/main/: AndroidManifest.xml
ffmpegandroidplayer/src/main/cpp/: native-lib.cpp
ffmpegandroidwallpaper/: build.gradle
ffmpegandroidwallpaper/src/main/: AndroidManifest.xml
ffmpegandroidwallpaper/src/main/cpp/: native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
